--- a/styles.css
+++ b/styles.css
@@ -400,6 +400,12 @@ button {
   overflow: auto;
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE and Edge */
+  position: relative;
+}
+
+.handsontable-root {
+  width: 100%;
+  height: 100%;
   position: relative; /* For absolute positioning of overlay */
   visibility: visible !important;
   opacity: 1 !important;
